[gd_scene load_steps=30 format=2]

[ext_resource path="res://HUD/sidepanel.gd" type="Script" id=1]
[ext_resource path="res://assets/wbc/neut/neutrophils_front.png" type="Texture" id=2]
[ext_resource path="res://assets/wbc/neut/pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/wbc/neut/disabled.png" type="Texture" id=4]
[ext_resource path="res://assets/wbc/template.png" type="Texture" id=5]
[ext_resource path="res://font1/NIKOLETA.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/wbc/mono/monocytes_front.png" type="Texture" id=7]
[ext_resource path="res://assets/wbc/mono/pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/wbc/mono/disabled.png" type="Texture" id=9]
[ext_resource path="res://assets/wbc/basop/basophils_front.png" type="Texture" id=10]
[ext_resource path="res://assets/wbc/basop/pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/wbc/basop/disabled.png" type="Texture" id=12]
[ext_resource path="res://assets/wbc/eosop/eosinophils_front.png" type="Texture" id=13]
[ext_resource path="res://assets/wbc/eosop/pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/wbc/eosop/disabled.png" type="Texture" id=15]
[ext_resource path="res://assets/wbc/lymp/lymphocytes_front.png" type="Texture" id=16]
[ext_resource path="res://assets/wbc/lymp/pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/wbc/lymp/disabled.png" type="Texture" id=18]
[ext_resource path="res://assets/buttons/upgrade.png" type="Texture" id=19]
[ext_resource path="res://font1/Blanka-Regular.otf" type="DynamicFontData" id=20]
[ext_resource path="res://label.tres" type="Theme" id=21]
[ext_resource path="res://assets/Healthbar/healthbar_over.png" type="Texture" id=22]
[ext_resource path="res://assets/Healthbar/healthbar_progress.png" type="Texture" id=23]
[ext_resource path="res://assets/buttons/sell.png" type="Texture" id=24]
[ext_resource path="res://assets/diamond.png" type="Texture" id=25]
[ext_resource path="res://assets/buttons/cancel.png" type="Texture" id=26]

[sub_resource type="DynamicFont" id=1]
size = 9
outline_size = 1
outline_color = Color( 0, 0.254902, 0.501961, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 20 )

[node name="MenuPress" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Neutrophils" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 6.0
margin_top = 381.0
margin_right = 54.0
margin_bottom = 431.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( -100.707, -49.7164 )
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NEutrophils" type="Sprite" parent="Neutrophils"]
position = Vector2( 24.0904, 33.1237 )
scale = Vector2( 0.0452753, 0.0442193 )
z_index = -1
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Neutrophils"]
margin_left = -1.50697
margin_top = 41.4651
margin_right = 53.493
margin_bottom = 52.4651
custom_fonts/font = SubResource( 1 )
text = "NEUTROPHILS"

[node name="Price" type="Label" parent="Neutrophils"]
margin_left = -5.64929
margin_top = -3.08423
margin_right = 10.3507
margin_bottom = 10.9158
custom_colors/font_outline_modulate = Color( 0.984314, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "50"

[node name="Monocytes" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 58.1999
margin_top = 381.557
margin_right = 111.2
margin_bottom = 431.557
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
expand = true

[node name="Monocytes2" type="Sprite" parent="Monocytes"]
position = Vector2( 26.6798, 32.4844 )
scale = Vector2( 0.0452753, 0.0442193 )
z_index = -1
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="Monocytes"]
margin_left = 4.81351
margin_top = 41.1691
margin_right = 49.8135
margin_bottom = 51.1691
custom_fonts/font = SubResource( 1 )
text = "MONOCYTES"

[node name="Price" type="Label" parent="Monocytes"]
margin_left = -6.63278
margin_top = -3.16418
margin_right = 9.36722
margin_bottom = 10.8358
custom_colors/font_outline_modulate = Color( 0.984314, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "75"

[node name="Basophils" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 113.0
margin_top = 380.0
margin_right = 167.0
margin_bottom = 433.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Basophils2" type="Sprite" parent="Basophils"]
position = Vector2( 26.9437, 33.6716 )
scale = Vector2( 0.0452753, 0.0442193 )
z_index = -1
texture = ExtResource( 5 )

[node name="Label3" type="Label" parent="Basophils"]
margin_left = 7.0
margin_top = 43.0
margin_right = 49.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "BASOPHILS"

[node name="Price" type="Label" parent="Basophils"]
margin_left = -1.8731
margin_top = -3.21875
margin_right = 14.1269
margin_bottom = 10.7813
custom_colors/font_outline_modulate = Color( 0.984314, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "90"

[node name="Eosinophils" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 170.0
margin_top = 379.0
margin_right = 220.0
margin_bottom = 432.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 15 )
expand = true

[node name="Eosinophils2" type="Sprite" parent="Eosinophils"]
position = Vector2( 25.5548, 34.3977 )
scale = Vector2( 0.0452753, 0.0442193 )
z_index = -1
texture = ExtResource( 5 )

[node name="Label4" type="Label" parent="Eosinophils"]
margin_left = 2.17377
margin_top = 43.6077
margin_right = 49.1738
margin_bottom = 53.6077
custom_fonts/font = SubResource( 1 )
text = "EOSINOPHILS"

[node name="Price" type="Label" parent="Eosinophils"]
margin_left = -11.1981
margin_top = -2.17639
margin_right = 12.8019
margin_bottom = 11.8236
custom_colors/font_outline_modulate = Color( 0.984314, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "130"

[node name="Lymphocytes" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 226.0
margin_top = 380.0
margin_right = 278.0
margin_bottom = 433.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
expand = true

[node name="Lymphocytes2" type="Sprite" parent="Lymphocytes"]
position = Vector2( 26.2779, 32.6304 )
scale = Vector2( 0.0452753, 0.0442193 )
z_index = -1
texture = ExtResource( 5 )

[node name="Label5" type="Label" parent="Lymphocytes"]
margin_left = 0.386322
margin_top = 42.8961
margin_right = 55.3863
margin_bottom = 52.8961
custom_fonts/font = SubResource( 1 )
text = "LYmpHOCYTES"

[node name="Price" type="Label" parent="Lymphocytes"]
margin_left = -12.1339
margin_top = -1.95709
margin_right = 11.8661
margin_bottom = 12.0429
custom_colors/font_outline_modulate = Color( 0.984314, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "230"

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3

[node name="Counter" type="Label" parent="."]
visible = false
margin_left = 43.5402
margin_top = 341.927
margin_right = 57.5402
margin_bottom = 356.927
text = "0"
valign = 1
uppercase = true

[node name="Upgrade" type="TextureButton" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.8364
margin_top = 382.712
margin_right = -5.83643
margin_bottom = -3.28833
texture_normal = ExtResource( 19 )

[node name="PopupPanel" type="PopupMenu" parent="Upgrade"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.5
margin_top = -201.5
margin_right = 322.5
margin_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Upgrade/PopupPanel"]
modulate = Color( 0.278431, 0, 0.129412, 0.596078 )
show_behind_parent = true
light_mask = 4
margin_left = -263.0
margin_top = -126.0
margin_right = 886.0
margin_bottom = 596.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="NeutrophilsText" type="TextureRect" parent="Upgrade/PopupPanel"]
margin_left = 13.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 83.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Details" type="Panel" parent="Upgrade/PopupPanel/NeutrophilsText"]
anchor_right = 1.0
margin_left = 82.0
margin_top = 14.0
margin_right = 513.0
margin_bottom = 67.0

[node name="Name" type="Label" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 9.82788
margin_top = 2.62077
margin_right = 84.8279
margin_bottom = 16.6208
custom_fonts/font = SubResource( 2 )
text = "Neutrophils"

[node name="Damage" type="Label" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 10.1565
margin_top = 29.4593
margin_right = 85.1565
margin_bottom = 44.4593
theme = ExtResource( 21 )
text = "Damage : 2+3"

[node name="Health" type="Label" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 97.0557
margin_top = 29.4593
margin_right = 172.056
margin_bottom = 44.4593
theme = ExtResource( 21 )
text = "Health : 2+3"

[node name="LevelCount" type="Label" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 135.712
margin_top = 9.87
margin_right = 210.712
margin_bottom = 23.87
theme = ExtResource( 21 )
text = "lvl.1"

[node name="Price" type="Label" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 516.237
margin_top = 22.0
margin_right = 539.237
margin_bottom = 36.0
theme = ExtResource( 21 )
text = "222"

[node name="Upgrade" type="TextureProgress" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 172.0
margin_top = 13.0
margin_right = 445.0
margin_bottom = 40.0
min_value = 1.0
value = 1.0
rounded = true
texture_over = ExtResource( 22 )
texture_progress = ExtResource( 23 )
tint_over = Color( 0.415686, 1, 0.117647, 1 )
tint_progress = Color( 0, 1, 0.870588, 1 )
nine_patch_stretch = true

[node name="UpgradeButton" type="TextureButton" parent="Upgrade/PopupPanel/NeutrophilsText/Details"]
margin_left = 449.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 46.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="MonocytesText" type="TextureRect" parent="Upgrade/PopupPanel"]
margin_left = 12.8995
margin_top = 84.0
margin_right = 86.8995
margin_bottom = 158.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Details" type="Panel" parent="Upgrade/PopupPanel/MonocytesText"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.57675
margin_top = -25.534
margin_right = 513.577
margin_bottom = 27.466

[node name="Name" type="Label" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 9.82788
margin_top = 2.62077
margin_right = 84.8279
margin_bottom = 16.6208
custom_fonts/font = SubResource( 2 )
text = "Monocytes"

[node name="Damage" type="Label" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 10.1565
margin_top = 32.9077
margin_right = 85.1565
margin_bottom = 46.9077
theme = ExtResource( 21 )
text = "Damage:50"

[node name="Health" type="Label" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 93.0922
margin_top = 31.7558
margin_right = 168.092
margin_bottom = 45.7558
theme = ExtResource( 21 )
text = "Speed:50"

[node name="LevelCount" type="Label" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 135.712
margin_top = 9.87
margin_right = 210.712
margin_bottom = 23.87
theme = ExtResource( 21 )
text = "lvl.1"

[node name="Price" type="Label" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 517.0
margin_top = 18.0
margin_right = 545.0
margin_bottom = 32.0
theme = ExtResource( 21 )
text = "500"

[node name="Upgrade" type="TextureProgress" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 172.0
margin_top = 13.0
margin_right = 445.0
margin_bottom = 40.0
texture_over = ExtResource( 22 )
texture_progress = ExtResource( 23 )
tint_over = Color( 0.415686, 1, 0.117647, 1 )
tint_progress = Color( 0, 1, 0.870588, 1 )
nine_patch_stretch = true

[node name="UpgradeButton" type="TextureButton" parent="Upgrade/PopupPanel/MonocytesText/Details"]
margin_left = 449.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 46.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="BasophilsText" type="TextureRect" parent="Upgrade/PopupPanel"]
margin_left = 15.071
margin_top = 160.645
margin_right = 91.071
margin_bottom = 235.645
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="Details" type="Panel" parent="Upgrade/PopupPanel/BasophilsText"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.40518
margin_top = -27.4425
margin_right = 509.405
margin_bottom = 25.5575

[node name="Name" type="Label" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 9.82788
margin_top = 2.62077
margin_right = 84.8279
margin_bottom = 16.6208
custom_fonts/font = SubResource( 2 )
text = "BASOPHILS"

[node name="Damage" type="Label" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 10.1565
margin_top = 32.9077
margin_right = 85.1565
margin_bottom = 46.9077
theme = ExtResource( 21 )
text = "Damage:50"

[node name="Health" type="Label" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 93.0922
margin_top = 31.7558
margin_right = 168.092
margin_bottom = 45.7558
theme = ExtResource( 21 )
text = "Speed:50"

[node name="LevelCount" type="Label" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 135.712
margin_top = 9.87
margin_right = 210.712
margin_bottom = 23.87
theme = ExtResource( 21 )
text = "lvl.1"

[node name="Price" type="Label" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 516.802
margin_top = 22.7625
margin_right = 547.802
margin_bottom = 36.7625
theme = ExtResource( 21 )
text = "200"

[node name="Upgrade" type="TextureProgress" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 172.0
margin_top = 13.0
margin_right = 445.0
margin_bottom = 40.0
texture_over = ExtResource( 22 )
texture_progress = ExtResource( 23 )
tint_over = Color( 0.415686, 1, 0.117647, 1 )
tint_progress = Color( 0, 1, 0.870588, 1 )
nine_patch_stretch = true

[node name="UpgradeButton" type="TextureButton" parent="Upgrade/PopupPanel/BasophilsText/Details"]
margin_left = 449.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 46.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="EosinophilsText" type="TextureRect" parent="Upgrade/PopupPanel"]
margin_left = 15.4659
margin_top = 238.091
margin_right = 89.4659
margin_bottom = 315.091
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="Details" type="Panel" parent="Upgrade/PopupPanel/EosinophilsText"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.79779
margin_top = -24.6505
margin_right = 509.798
margin_bottom = 28.3495

[node name="Name" type="Label" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 9.82788
margin_top = 2.62077
margin_right = 84.8279
margin_bottom = 16.6208
custom_fonts/font = SubResource( 2 )
text = "EOSINOPHILS"

[node name="Damage" type="Label" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 10.1565
margin_top = 32.9077
margin_right = 85.1565
margin_bottom = 46.9077
theme = ExtResource( 21 )
text = "Damage:50"

[node name="Health" type="Label" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 93.0922
margin_top = 31.7558
margin_right = 168.092
margin_bottom = 45.7558
theme = ExtResource( 21 )
text = "Speed:50"

[node name="LevelCount" type="Label" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 135.712
margin_top = 9.87
margin_right = 210.712
margin_bottom = 23.87
theme = ExtResource( 21 )
text = "lvl.1"

[node name="Price" type="Label" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 517.413
margin_top = 21.0
margin_right = 544.413
margin_bottom = 35.0
theme = ExtResource( 21 )
text = "400"

[node name="Upgrade" type="TextureProgress" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 172.0
margin_top = 13.0
margin_right = 445.0
margin_bottom = 40.0
texture_over = ExtResource( 22 )
texture_progress = ExtResource( 23 )
tint_over = Color( 0.415686, 1, 0.117647, 1 )
tint_progress = Color( 0, 1, 0.870588, 1 )
nine_patch_stretch = true

[node name="UpgradeButton" type="TextureButton" parent="Upgrade/PopupPanel/EosinophilsText/Details"]
margin_left = 449.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 46.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="LymphocytesText" type="TextureRect" parent="Upgrade/PopupPanel"]
margin_left = 15.0
margin_top = 317.0
margin_right = 100.0
margin_bottom = 403.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 1

[node name="Details" type="Panel" parent="Upgrade/PopupPanel/LymphocytesText"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -6.08609
margin_top = -28.6191
margin_right = 499.914
margin_bottom = 24.3809

[node name="Name" type="Label" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 9.82788
margin_top = 2.62077
margin_right = 84.8279
margin_bottom = 16.6208
custom_fonts/font = SubResource( 2 )
text = "LYMPHOCYTES"

[node name="Damage" type="Label" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 10.1565
margin_top = 32.9077
margin_right = 85.1565
margin_bottom = 46.9077
theme = ExtResource( 21 )
text = "Damage:50"

[node name="Health" type="Label" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 93.0922
margin_top = 31.7558
margin_right = 168.092
margin_bottom = 45.7558
theme = ExtResource( 21 )
text = "Speed:50"

[node name="LevelCount" type="Label" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 144.466
margin_top = 9.87
margin_right = 219.466
margin_bottom = 23.87
theme = ExtResource( 21 )
text = "lvl.1"

[node name="Price" type="Label" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 513.943
margin_top = 19.66
margin_right = 532.943
margin_bottom = 33.66
theme = ExtResource( 21 )
text = "40"

[node name="Upgrade" type="TextureProgress" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 172.0
margin_top = 13.0
margin_right = 445.0
margin_bottom = 40.0
texture_over = ExtResource( 22 )
texture_progress = ExtResource( 23 )
tint_over = Color( 0.415686, 1, 0.117647, 1 )
tint_progress = Color( 0, 1, 0.870588, 1 )
nine_patch_stretch = true

[node name="UpgradeButton" type="TextureButton" parent="Upgrade/PopupPanel/LymphocytesText/Details"]
margin_left = 449.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 46.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
expand = true

[node name="Diamond2" type="Sprite" parent="Upgrade/PopupPanel"]
position = Vector2( 640.448, 8.20694 )
scale = Vector2( 0.644337, 0.709704 )
texture = ExtResource( 25 )

[node name="Diamond" type="Label" parent="Upgrade/PopupPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -39.2837
margin_top = -4.5851
margin_right = -9.28369
margin_bottom = -4.58508
custom_fonts/font = SubResource( 3 )
text = "200"

[node name="Cancel" type="TextureButton" parent="Upgrade/PopupPanel"]
margin_left = -19.1442
margin_top = -18.3319
margin_right = 24.8558
margin_bottom = 25.6681
texture_normal = ExtResource( 26 )
expand = true
stretch_mode = 4
[connection signal="button_down" from="Neutrophils" to="." method="_on_button_down"]
[connection signal="button_down" from="Neutrophils" to="." method="spawning"]
[connection signal="button_up" from="Neutrophils" to="." method="cancel_spawning"]
[connection signal="focus_exited" from="Neutrophils" to="." method="_on_Neuthrophils_focus_exited"]
[connection signal="button_down" from="Monocytes" to="." method="_on_button_down"]
[connection signal="button_down" from="Monocytes" to="." method="spawning"]
[connection signal="button_up" from="Monocytes" to="." method="cancel_spawning"]
[connection signal="button_down" from="Basophils" to="." method="_on_button_down"]
[connection signal="button_down" from="Basophils" to="." method="spawning"]
[connection signal="button_up" from="Basophils" to="." method="cancel_spawning"]
[connection signal="button_down" from="Eosinophils" to="." method="_on_button_down"]
[connection signal="button_down" from="Eosinophils" to="." method="spawning"]
[connection signal="button_up" from="Eosinophils" to="." method="cancel_spawning"]
[connection signal="button_down" from="Lymphocytes" to="." method="_on_button_down"]
[connection signal="button_down" from="Lymphocytes" to="." method="spawning"]
[connection signal="button_up" from="Lymphocytes" to="." method="cancel_spawning"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/NeutrophilsText/Details/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/MonocytesText/Details/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/BasophilsText/Details/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/EosinophilsText/Details/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/LymphocytesText/Details/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="Upgrade/PopupPanel/Cancel" to="." method="_on_Cancel_pressed"]
